[tool.poetry]
name = "pyro-ssm"
version = "0.1.0"
description = ""
authors = ["ns"]
readme = "README.md"
packages = [{include = "pyro_ssm"}]

[tool.poetry.dependencies]
python = "^3.11,<3.12"
matplotlib = "^3.6.3"
numpy = "^1.24.1"
scipy = "^1.10.0"
torch = "^1.13.1"
pyro-ppl = "^1.8.4"
pandas = "^1.5.3"
graphviz = "^0.20.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
tqdm = "^4.64.1"
flake8 = "^6.0.0"
black = "^22.12.0"
rope = "^1.7.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
